<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_examples_bringup</name>
  <version>0.0.0</version>
  <description>Example bringup package.</description>
  <maintainer email="robmasocco@gmail.com">Roberto Masocco</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>custom_topic_cpp</exec_depend>
  <exec_depend>simple_service_cpp</exec_depend>
  <exec_depend>parameters_example_cpp</exec_depend>
  <exec_depend>topic_pubsub_py</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
